# CrashLab_2021_main_rpi

cam_sub/: CMakeLists.txt  package.xml
cam_sub/src/: cam_sub_node.cpp
motor_msgs/: CMakeLists.txt  package.xml
motor_msgs/msg/: angle.msg  gain.msg  pwm.msg  rpm.msg
rospy_zv/: .package.xml.swp  CMakeLists.txt  package.xml
rospy_zv/scripts/: Sound.py  Sound_modif.py  UI_all.py  UI_main.py  bbox_subpub.py  test_Sound.py
zalver_main/: CMakeLists.txt  package.xml
zalver_main/launch/: robot_core.launch
zalver_main/msg/: state.msg
zalver_main/src/: robot_main_node.cpp
zalver_main/srv/: trig.srv
